[tool.poetry]
name = "remotepartialdecimal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sparqlwrapper = "^1.8.5"
telegram = "^0.0.1"
flask = "^2.3.2"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
